k8s/proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proxy-deployment
  namespace: froge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: proxy
  template:
    metadata:
      labels:
        app: proxy
    spec:
      containers:
      - name: proxy
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: joan-build
          mountPath: /usr/share/nginx/html
      volumes:
      - name: joan-build
        hostPath:
          path: /home/debian/dev/joan.io/build
